# MajorProject

./: README.md
backend/: .flake8  pyproject.toml
backend/config/: settings.py  urls.py
backend/core/: routers.py
backend/core/abstract/: models.py  serializers.py  viewsets.py
backend/core/fixtures/: user.py
backend/core/management/commands/: populate.py
backend/core/ml_models/: apps.py  views.py
backend/core/ml_models/ml/: recommendation_model.py
backend/core/ml_models/saved_models/: logistic_regression_model.pkl  tfidf_vectorizer.pkl
backend/core/product/: models.py
backend/core/product/api/: serializers.py  viewsets.py
backend/core/product/migrations/: 0001_initial.py  0002_alter_product_options_alter_product_author_and_more.py  0003_alter_product_author_alter_product_description.py
backend/core/product/tests/: test_product.py
backend/core/reviews/: apps.py  models.py
backend/core/reviews/api/: serializers.py  viewsets.py
backend/core/reviews/migrations/: 0001_initial.py  0002_alter_review_options_alter_review_author_and_more.py
backend/core/user/: models.py
backend/core/user/api/: serializers.py  viewsets.py
backend/core/user/migrations/: 0001_initial.py  (+2 more)
backend/core/user/tests/: test_user.py
backend/data/csv/: products.csv  users.csv
backend/data/json/: products.json  reviews.json  users.json
backend/insomnia/: Insomnia_2024-09-07.json
backend/recommendation_system/data/: products.csv  reviews.csv  users.csv
backend/recommendation_system/notebooks/: Recommender_system.ipynb
backend/scripts/: convert_json_to_csv.py
(+25 files in other folders)
